app/assets/stylesheets/courses.displace.css.scss
/* This is the title of the page where you select
   which semester's course list you want to see */
.semester_list
{
  color:blue;
  font-family: 'Arial', 'Tahoma', sans-serif;
  font-size:20pt;
  font-weight:bold;
}



/* This is for the table that lists
   the different majors */
.major_table
{
  font-family: 'Arial', 'Tahoma', sans-serif;
  font-size:13pt;
  border-collapse: collapse;
}
/* This is for the cells inside of the table above */
.major_cells
{
  width: 24%;  
  padding: 0px;
  border: 0px solid black;
}

.major_cells2
{
  padding: 0px;
  border: 0px solid black;
}

/* This is the title of the page where you select
   which major's classes you want to see and also
	 which class within a major you choose */
.catalog_title
{
  font-family: 'Arial', 'Tahoma', sans-serif;
  font-size:20pt;
  font-weight:bold;
  margin-bottom: 0.75em;
}

/* This is for the table that lists
   the different courses in a major */
#course_table
{
  font-family: 'Arial', 'Tahoma', sans-serif;
  font-size:13pt;
  border-collapse: collapse;
}

/* This is for the cells inside of the tables above */
.course_cells_code
{
  font-family: 'Arial', 'Tahoma', sans-serif;
  width: 30%;
  padding: 0px;
  border: 0px solid black;
}

/* the other cells inside the course list table */
.course_cells_title
{
font-family: 'Arial', 'Tahoma', sans-serif;
padding: 0px;
border: 0px solid black;
}

/*these are the breadcrumbs links */
.breadcrumb
{
font-size:14pt;
font-family: 'Arial', 'Tahoma', sans-serif;

margin: 0 0 18px;
padding: 7px 14px;
background-color: whiteSmoke;
background-repeat: repeat-x;
background-image: -khtml-gradient(linear, left top, left bottom, from(white), to(whiteSmoke));
background-image: -moz-linear-gradient(top, white, whiteSmoke);
background-image: -ms-linear-gradient(top, white, whiteSmoke);
background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, whiteSmoke));
background-image: -webkit-linear-gradient(top, white, whiteSmoke);
background-image: -o-linear-gradient(top, white, whiteSmoke);
background-image: linear-gradient(top, white, whiteSmoke);
filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f5f5f5', GradientType=0);
border: 1px solid #DDD;
-webkit-border-radius: 3px;
-moz-border-radius: 3px;
border-radius: 3px;
-webkit-box-shadow: inset 0 1px 0 #ffffff;
-moz-box-shadow: inset 0 1px 0 #ffffff;
box-shadow: inset 0 1px 0 #ffffff;
}

/* The number of the course on the course page */
#course_num
{
color: #1A1A1A;
font-size:26pt;
font-family: 'Arial', 'Tahoma', sans-serif;
font-weight:bolder; 
padding-bottom:1%;
}

/* The name of the course on the course page */
#course_name
{
color:#2F2F2F;
font-weight:bold;
font-size:19pt;
font-family: 'Arial', 'Tahoma', sans-serif;
}

/* The course description */
#course_description
{
font-family: 'Arial', 'Tahoma', sans-serif;
line-height:115%;
}

/* the box on the course page with the title, description, etc. */
.course_box
{
  margin:0 auto 1em auto;
  padding: 1em;
  background-color: #F9f9f9;
  width: 95%;
  border: 1px solid #cccccc;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

/* the add class button on the course page */
#add_class_button
{
float:right;
}

#class_already_added
{
float:right;
}
/* button font for add class */
.font
{
font-family: 'Arial', 'Tahoma', sans-serif;
font-size:15pt;
font-weight:bold;
text-align: right;
}

#test_button
{
float: right;
}

/* the table that displays section, professor, etc on course page */
.sections_table
{
font-family: 'Arial', 'Tahoma', sans-serif;
font-size:14pt;
float: left;

}

.section_tabs
{
font-family: 'Arial', 'Tahoma', sans-serif;
font-size:14pt;
}

/* setting the background for all the pages in the course list */
.catalog_page
{
margin-top: 20px;
}


/*

#pagination_list{
  margin: auto;
  float: left;
  width: 100%;
	list-style: none; 
  margin-bottom: 1em;
} 

#pagination_list li{
  float: left;
}

*/

.pagination {
height: 36px;
margin: 18px 0;
}

.pag {
width: 110%;
}

.pagination li {
display: inline;
  a:hover {
    background-color: #afeeee; 
  } 
}

.pagination a {
  float: left;
  padding: 0 14px;
  line-height: 34px;
  border-right: 1px solid;
  border-right-color: #DDD;
  border-right-color: rgba(0, 0, 0, 0.15);
  text-decoration: none;

}

.pagination ul {
  float: left;
  margin: 0;
  
  border: 1px solid #DDD;
  border: 1px solid rgba(0, 0, 0, 0.15);
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.05);
  -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.05);
  box-shadow: 0 1px 2px rgba(0,0,0,0.05);
}

/* the text displaying the number of hours a class is */
#hours
{
font-family: 'Arial', 'Tahoma', sans-serif;
font-size:14pt;
margin-top: 7px;
margin-bottom: 11px;
font-weight:bold;
}



// zebra striped table for course page
.zebra{
  tr:nth-child(odd) {
  background-color: white; 
  }

}

// columns, Time Days Building etc...
.tab_columns{
  width: 20%;
  padding-top: .5em;
  padding-bottom: .5em;
  font-weight: bold;
}

.table_data{
  padding-top: .5em;
  padding-bottom: .5em;
  text-align:center;
}

.tab_headers{
  font-size: 1em;
}

